commit translated contents

--- a/learn-certs-pr/power-platform-app-maker/index.yml
+++ b/learn-certs-pr/power-platform-app-maker/index.yml
@@ -3,13 +3,14 @@ title: 'Microsoft Certified: Power Platform App Maker Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform App Maker Associate'
   description: Der App-Maker erstellt Lösungen zur Vereinfachung, Automatisierung und Transformation von Aufgaben und Prozessen für sich selbst und sein Team, wobei er über profunde Fachkenntnisse auf dem Gebiet der Lösung verfügt. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse und Prozessanalyse usw. vertraut.
-  ms.openlocfilehash: ac8747e8b4b03610195769021fef4bede02208ad
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.openlocfilehash: 843c7e2dc25a25b7e73c822ba19c02f904b1dab9
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132111737"
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694483"
 uid: certification.power-platform-app-maker
+certificationRenewalUid: renewal.power-platform-app-maker
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: "Wenn Sie Experte im Unternehmensbereich sind, über fundiertes Wissen in Ihrem Lösungsfachgebiet verfügen und Ihre Leidenschaft für die Erstellung von Microsoft Power Platform-Lösungen nutzen möchten, um Aufgaben und Prozesse für Ihr Team zu vereinfachen, zu automatisieren und zu transformieren, ist diese Zertifizierung genau das Richtige für Sie. Sie müssen dazu in der Lage sein, wichtige technische Aufgaben für Business Analysts durchzuführen, z. B. Datenmodellierung, grundlegende UX-Entwürfe, Anforderungsanalyse und Prozessanalyse. \n\nSie erfüllen das Profil für die Rolle eines App-Erstellers, wenn Sie eigenverantwortlich und lösungsorientiert sind und mit den Erstellertools von Microsoft Power Platform an der Lösung von Geschäftsproblemen arbeiten. Möglicherweise haben Sie Erfahrung mit Visual Basic for Applications, Excel PivotTables, Teams und anderen Tools. Obwohl Sie möglicherweise keine offiziellen IT-Schulungen erhalten haben, arbeiten Sie mit IT-Administratoren und Microsoft Power Platform-Entwicklern zusammen und verwenden Technologie, um Geschäftsprobleme zu lösen. Sie sind für folgende Aufgaben zuständig&#58;  \n- Entwerfen und Erstellen von Apps und Automatisieren von Workflows \n- Analysieren und Visualisieren von Daten im Kontext einer App oder eines automatisierten Workflows \n- Implementieren und Verwalten von Apps und automatisierten Workflows\n\nWeitere Informationen finden Sie in unserem Beitrag [Nutzen Sie Power Platform für die App-Erstellung? Zeit für eine Zertifizierung](https://techcommunity.microsoft.com/t5/microsoft-learn-blog/are-you-a-power-platform-app-maker-now-s-the-time-to-get/ba-p/1512993). Wenn Sie mehr Erfahrung benötigen, bevor Sie diese Zertifizierung angehen, ziehen Sie Folgendes in Betracht&#58;\n- Arbeiten Sie an einem Projekt mit, um reale Erfahrungen mit der Datenmodellierung, dem grundlegenden UX-Design, der Anforderungsanalyse oder der Prozessanalyse zu sammeln.\n- Durchlaufen Sie verfügbare Lernpfade auf Microsoft Learn.\n- Melden Sie sich zu einem Präsenzschulungskurs an."
 subTitle: Der App-Maker erstellt Lösungen zur Vereinfachung, Automatisierung und Transformation von Aufgaben und Prozessen für sich selbst und sein Team, wobei er über profunde Fachkenntnisse auf dem Gebiet der Lösung verfügt. Sie sind mit wichtigen technischen Business-Analyst-Aufgaben wie Datenmodellierung, grundlegendem UX-Design, Anforderungsanalyse und Prozessanalyse usw. vertraut.
@@ -98,6 +99,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
