--- a/learn-certs-pr/power-platform-functional-consultant-associate/index.yml
+++ b/learn-certs-pr/power-platform-functional-consultant-associate/index.yml
@@ -3,13 +3,14 @@ title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
 metadata:
   title: 'Microsoft Certified: Power Platform Functional Consultant Associate'
   description: Nutzen Sie diese Zertifizierung als Functional Consultant, um sich für Projekte und andere Engagements effektiver zu vermarkten. Die Zertifizierung „Microsoft Power Platform Functional Consultant Associate“ informiert Organisationen darüber, dass Sie – ohne Code oder mit wenig Code – Lösungen erstellen können, die normalerweise Entwicklerkenntnisse erfordern würden.
-  ms.openlocfilehash: 23dec4ee7796bcdb17d25a26823cfcbb7371a2b9
-  ms.sourcegitcommit: 9d7c87bf1eec1cc6ecfd48c6997265bb0f47352f
+  ms.openlocfilehash: faeb381ea7ccbafdf621e1a19ed10438704e0061
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 10/05/2021
-  ms.locfileid: "132112725"
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694505"
 uid: certification.power-platform-functional-consultant-associate
+certificationRenewalUid: renewal.power-platform-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
   <div><font color='red'><strong>Der Inhalt dieser Zertifizierung wurde am 1. Oktober 2021 aktualisiert. Laden Sie das Dokument zu den bewerteten Qualifikationen von der Seite für die <a href="/learn/certifications/exams/pl-200">Prüfung PL-200</a> herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
@@ -93,6 +94,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Ihrer Zertifizierungsbadges
-  description: Feiern Sie Ihren Erfolg in Ihrem Netzwerk. Erhalten Sie Ihren Microsoft-Zertifizierungsbadge, und fügen Sie ihn beispielsweise LinkedIn oder Ihrem Lebenslauf hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
