--- a/learn-certs-pr/d365-business-central-functional-consultant-associate/index.yml
+++ b/learn-certs-pr/d365-business-central-functional-consultant-associate/index.yml
@@ -3,13 +3,14 @@ title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultan
 metadata:
   title: 'Microsoft Certified: Dynamics 365 Business Central Functional Consultant Associate'
   description: Dynamics 365 Business Central Functional Consultants sind für die Implementierung der wichtigsten Einrichtungsprozesse für kleine und mittlere Unternehmen verantwortlich.
-  ms.openlocfilehash: c5ecb5ef6fccc6cdb67a2645aa3d3f739db187c3
-  ms.sourcegitcommit: 9910ee6c567f78305da1d27159bd03c6f3258035
+  ms.openlocfilehash: 900cee3854da483daa9f89f8a6187af7d9cee3fd
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/24/2021
-  ms.locfileid: "133079128"
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694516"
 uid: certification.d365-business-central-functional-consultant-associate
+certificationRenewalUid: renewal.d365-business-central-functional-consultant-associate
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: >-
   Wenn Sie als Functional Consultant zentrale Microsoft Dynamics 365 Business Central-Einrichtungsprozesse für kleine und mittelständische Unternehmen implementieren, ist diese Zertifizierung für Sie geeignet. Sie benötigen Erfahrung im Konfigurieren von Dynamics 365 Business Central-Rollencentern, einschließlich der Anpassung von Erkenntnissen, Hinweisen, Aktionskacheln, Berichten und Diagrammen. Außerdem sollten Sie Business Central mithilfe von Microsoft Power Platform-Komponenten erweitern können.
