--- a/learn-certs-pr/information-protection-administrator/index.yml
+++ b/learn-certs-pr/information-protection-administrator/index.yml
@@ -2,22 +2,31 @@
 title: 'Microsoft Certified: Information Protection Administrator Associate'
 metadata:
   title: 'Microsoft Certified: Information Protection Administrator Associate'
-  description: Der Informationsschutz-Administrator plant und implementiert Kontrollen, die die Compliance-Anforderungen des Unternehmens erfüllen. Diese Person ist dafür verantwortlich, Anforderungen und Compliance-Kontrollen technisch umzusetzen. Sie helfen den Eigentümern der Organisationskontrolle, konform zu werden und zu bleiben.
-uid: certification.information-protection-administrator 
+  description: Der*Die Microsoft Information Protection-Administrator*in plant und implementiert Kontrollen, die die Complianceanforderungen der Organisation erfüllen. Diese Person ist für die Umsetzung von Anforderungen und Compliancekontrollen in die technische Implementierung verantwortlich. Sie unterstützen die Verantwortlichen für die Organisationssteuerung dabei, die Complianceanforderungen dauerhaft zu erfüllen.
+  ms.openlocfilehash: 2b95b047a8f4329e85fbf616ed551264c2135165
+  ms.sourcegitcommit: 367335eb84a6583bb7300f39e7d302c9bbd30bea
+  ms.translationtype: HT
+  ms.contentlocale: de-DE
+  ms.lasthandoff: 12/13/2021
+  ms.locfileid: "134694494"
+uid: certification.information-protection-administrator
+certificationRenewalUid: renewal.information-protection-administrator
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
-summary: |-
-  Der Informationsschutz-Administrator plant und implementiert Kontrollen, die die Compliance-Anforderungen des Unternehmens erfüllen. Diese Person ist dafür verantwortlich, Anforderungen und Compliance-Kontrollen technisch umzusetzen. Sie helfen den Eigentümern der Organisationskontrolle, konform zu werden und zu bleiben.
-  
-  Sie arbeiten mit IT-Mitarbeitern, Eigentümern von Geschäftsanwendungen, Mitarbeitern und rechtlichen Interessengruppen zusammen, um Technologien zu implementieren, die Richtlinien und Kontrollen unterstützen, die erforderlich sind, um die regulatorischen Anforderungen für ihr Unternehmen ausreichend zu erfüllen. Sie arbeiten auch mit der Compliance- und Sicherheitsleitung zusammen, z. B. einem Chief Compliance Officer und einem Sicherheitsbeauftragten, um die gesamte Breite des damit verbundenen Unternehmensrisikos zu bewerten und diese Richtlinien umzusetzen.
-  
-  Diese Person definiert geltende Anforderungen und testet IT-Prozesse und -Operationen anhand dieser Richtlinien und Kontrollen. Sie sind für die Erstellung von Richtlinien und Regeln für die Klassifizierung von Inhalten, die Verhinderung von Datenverlust, die Verwaltung und den Schutz verantwortlich.
-subTitle: Der Informationsschutz-Administrator plant und implementiert Kontrollen, die die Compliance-Anforderungen des Unternehmens erfüllen. Diese Person ist dafür verantwortlich, Anforderungen und Compliance-Kontrollen technisch umzusetzen. Sie helfen den Eigentümern der Organisationskontrolle, konform zu werden und zu bleiben.
+summary: >-
+  Der*Die Microsoft Information Protection-Administrator*in plant und implementiert Kontrollen, die die Complianceanforderungen der Organisation erfüllen. Diese Person ist für die Umsetzung von Anforderungen und Compliancekontrollen in die technische Implementierung verantwortlich. Sie unterstützen die Verantwortlichen für die Organisationssteuerung dabei, die Complianceanforderungen dauerhaft zu erfüllen.
+
+
+  Sie arbeiten mit IT-Mitarbeiter*innen (IT), den Verantwortlichen für Geschäftsanwendungen, der Personalabteilung und juristischen Stakeholder*innen zusammen, um Technologien zur Unterstützung von Richtlinien und Kontrollen zu implementieren, die zur ausreichenden Erfüllung gesetzlicher Anforderungen für ihre Organisation erforderlich sind. Sie arbeiten auch mit Führungskräften im Bereich Compliance und Sicherheit zusammen, z. B. einem*einer Chief Compliance Officer und einem*einer Sicherheitsbeauftragten, um die gesamte Bandbreite des damit verbundenen Unternehmensrisikos zu bewerten und diese Richtlinien gemeinsam zu entwickeln.
+
+
+  Diese Person definiert die anwendbaren Anforderungen und testet IT-Prozesse und -Vorgänge anhand dieser Richtlinien und Kontrollen. Sie sind für das Erstellen von Richtlinien und Regeln für die Bereiche Inhaltsklassifizierung, Verhinderung von Datenverlust, Governance und Schutz verantwortlich.
+subTitle: Der*Die Microsoft Information Protection-Administrator*in plant und implementiert Kontrollen, die die Complianceanforderungen der Organisation erfüllen. Diese Person ist für die Umsetzung von Anforderungen und Compliancekontrollen in die technische Implementierung verantwortlich. Sie unterstützen die Verantwortlichen für die Organisationssteuerung dabei, die Complianceanforderungen dauerhaft zu erfüllen.
 levels:
 - intermediate
 skills:
-- Informationsschutz implementieren
-- Implementieren der Verhinderung von Datenverlust
-- Implementieren von Informations-Governance
+- Implement information protection
+- Implement data loss prevention
+- Implement information governance
 roles:
 - administrator
 - ip-admin
@@ -41,10 +50,10 @@ exams:
 resources:
 - title: Zertifizierungsposter
   description: Sehen Sie sich eine Übersicht mit Grundlagen, rollenbasierten Zertifizierungen und Spezialzertifizierungen für Dynamics 365 und Power Platform an.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE2PjDI
+  href: https://aka.ms/traincertposter
 - title: Schulungs- und Zertifizierungsleitfaden
   description: Informieren Sie sich über die Zertifizierungen in einem übersichtlichen Schulungs- und Zertifizierungsleitfaden.
-  href: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWtQJJ
+  href: https://aka.ms/TrainingCertDeck
 - title: Exam Replay
   description: Sehen Sie sich zwei großartige Angebote an, die Ihnen helfen, Ihre Erfolgschancen zu erhöhen.
   href: ../deals.md
@@ -54,6 +63,6 @@ resources:
 - title: Unterstützung von Zertifizierungen
   description: Erhalten Sie Hilfe in Microsoft Certification Support-Foren. Ein Forenmoderator wird Ihnen an einem Werktag (Montag-Freitag) antworten.
   href: ../help.md
-- title: Teilen Sie Ihre Zertifizierungsabzeichen
-  description: Feiern Sie Ihre Leistung mit Ihrem Netzwerk. Fordern Sie Ihr  Microsoft-Certification an und fügen Sie es LinkedIn, Ihrem Lebenslauf und anderem hinzu.
+- title: Teilen Sie Ihre Zertifizierungsbadges.
+  description: Feiern Sie Ihren Erfolg mit Ihrem Netzwerk. Fordern Sie Ihren Microsoft-Zertifizierungsbadge an, und fügen Sie ihn beispielsweise in LinkedIn oder in Ihrem Lebenslauf hinzu.
   href: ../badges.md
