--- a/learn-certs-pr/azure-for-sap-workloads-specialty/renew/index.yml
+++ b/learn-certs-pr/azure-for-sap-workloads-specialty/renew/index.yml
@@ -3,12 +3,12 @@ title: 'Erneuerung von Microsoft Certified: Azure for SAP Workloads Specialty'
 metadata:
   title: 'Erneuerung von Microsoft Certified: Azure for SAP Workloads Specialty'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
-  ms.openlocfilehash: ed68f98cee95880bd6e3d2b58df960d0018aec37
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.openlocfilehash: 6ea5941b6add11e8518b603d7fe35076bb8c65ec
+  ms.sourcegitcommit: d80173e30006986f164a370573cac47d596ddb52
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132110954"
+  ms.lasthandoff: 12/06/2021
+  ms.locfileid: "133742877"
 uid: renewal.azure-for-sap-workloads-specialty
 certificationUid: certification.azure-for-sap-workloads-specialty
 assessmentId: 42630d0d-7b19-4782-8052-99fe7e540f08
@@ -17,10 +17,10 @@ iconUrl: /media/learn/certification/badges/microsoft-certified-specialty-badge.s
 summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie sich über die neuesten Azure for SAP-Aktualisierungen auf dem Laufenden gehalten haben, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
 skills:
 - Planning for implementing SAP solutions on Azure
-- Connect Power Platform to SAP on Azure
 - Implement Azure VM-based SAP solutions
 - Migrate SAP workloads to Azure
-- SAP HANA on Azure Compute, Network, and Storage
+- Utilize Azure for SAP workloads reference architecture
+- Introduction to Azure for SAP workloads
 - Using IAAS support with Azure for SAP workloads
 - Maintain Azure for SAP workloads
 - Implement Azure Monitoring for SAP workloads on Azure VMs
@@ -28,6 +28,6 @@ examsPassed:
 - az-120
 studyGuideDescription: 'Nutzen Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft Certified: Azure for SAP Workloads Specialty“ vorzubereiten.'
 resources:
-- title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+- title: Informationen zur Zertifizierungsverlängerung
+  summary: Informationen zum Prozess und zu den Anforderungen der Onlineverlängerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
