--- a/learn-certs-pr/d365-functional-consultant-financials/renew/index.yml
+++ b/learn-certs-pr/d365-functional-consultant-financials/renew/index.yml
@@ -3,12 +3,12 @@ title: 'Erneuerung von Microsoft Certified: Dynamics 365 Finance Functional Cons
 metadata:
   title: 'Erneuerung von Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate'
   description: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern.
-  ms.openlocfilehash: cc2e16fcb8aa08d5f93eff285e895fdf93c4e3d9
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
+  ms.openlocfilehash: 71548cec002a8961ecc23a5ddd8fc99d4d5f69d8
+  ms.sourcegitcommit: 3a53de64ec81bf478275e0a13a80f3a69bc1e586
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132106835"
+  ms.lasthandoff: 12/10/2021
+  ms.locfileid: "134680649"
 uid: renewal.d365-functional-consultant-financials
 certificationUid: certification.d365-functional-consultant-financials
 assessmentId: 778eff49-9918-4702-b1af-5b6e14dc6c84
@@ -16,12 +16,13 @@ durationInMinutes: 45
 iconUrl: /media/learn/certification/badges/microsoft-certified-associate-badge.svg
 summary: Wenn Sie diese Zertifizierung besitzen und sie innerhalb von sechs Monaten abläuft, können Sie sie erneuern. Zeigen Sie, dass Sie sich über die Neuerungen zu Dynamics 365 Finance auf dem Laufenden gehalten haben, indem Sie das Erneuerungsexamen bestehen. Sie können sich auch mit der kuratierten Sammlung von Lernmodulen auf die Erneuerung vorbereiten.
 skills:
+- Perform general ledger daily procedures in Dynamics 365 Finance
+- Perform Accounts payable daily procedures in Dynamics 365 Finance
 - Process credit and collections in Dynamics 365 Finance
-- Configure fixed assets management in Dynamics 365 Finance
 examsPassed:
 - mb-300, mb-310
 studyGuideDescription: 'Verwenden Sie diese Sammlung von Lernmodulen, um sich auf das Erneuerungsexamen „Microsoft Certified: Dynamics 365 Finance Functional Consultant Associate“ vorzubereiten.'
 resources:
-- title: Informationen zur Zertifizierungserneuerung
-  summary: Informationen zum Prozess und zu den Anforderungen der Onlineerneuerung Ihrer Zertifizierungen
+- title: Informationen zur Zertifizierungsverlängerung
+  summary: Grundlagen zum Prozess und zu den Anforderungen der Onlineverlängerung Ihrer Zertifizierungen
   url: https://docs.microsoft.com/learn/certifications/renew-your-microsoft-certification
