commit translated contents

--- a/learn-certs-pr/exams/az-140.yml
+++ b/learn-certs-pr/exams/az-140.yml
@@ -3,12 +3,12 @@ title: Konfigurieren und Betreiben von Microsoft Azure Virtual Desktop
 metadata:
   title: 'Prüfung AZ-140: Configuring and Operating Microsoft Azure Virtual Desktop'
   description: 'Prüfung AZ-140: Configuring and Operating Microsoft Azure Virtual Desktop'
-  ms.openlocfilehash: 41f74557f245717ffe6e2d2f53bf1e6ec33a28fd
-  ms.sourcegitcommit: ed10dec6b04e8c68123f45a761562a79ac8bdded
+  ms.openlocfilehash: 316cbff0707e06d3333c242cdc4e570ac94500be
+  ms.sourcegitcommit: b69a9b2b33f5f8993b5f681e1e6362b5666158e9
   ms.translationtype: HT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 11/23/2021
-  ms.locfileid: "132942370"
+  ms.lasthandoff: 12/18/2021
+  ms.locfileid: "135412664"
 uid: exam.az-140
 displayName: AZ-140
 summary: >-
@@ -28,6 +28,7 @@ summary: >-
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben zu bewältigen: Planen einer Azure Virtual Desktop -Architektur, Implementieren einer Azure Virtual Desktop-Infrastruktur, Verwalten von Zugriff und Sicherheit, Verwalten von Benutzerumgebungen und Apps sowie Überwachen und Warten einer Azure Virtual Desktop-Infrastruktur.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MFST
+practiceTestUrl: https://in.mindhub.com/az-140-configuring-and-operating-microsoft-azure-virtual-desktop-microsoft-official-practice-test/p/MU-AZ-140?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
 scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-140&examname=Exam%20AZ-140:%20Configuring%20and%20Operating%20Azure%20Virtual%20Desktop&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-140
 locales:
 - en
