--- a/learn-certs-pr/exams/az-305.yml
+++ b/learn-certs-pr/exams/az-305.yml
@@ -26,7 +26,7 @@ summary: >-
 subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufgaben auszuführen: Entwerfen von Identitäts-, Governance- und Überwachungslösungen, Entwerfen von Datenspeicherlösungen, Entwerfen von Geschäftskontinuitätslösungen und Entwerfen von Infrastrukturlösungen.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RWLFRU
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-305&examname=Exam%20AZ-305:%20Designing%20Microsoft%20Azure%20Infrastructure%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-305
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=AZ-305&examname=Exam%20AZ-305:%20Designing%20Microsoft%20Azure%20Infrastructure%20Solutions&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-305
 locales:
 - en
 levels:
