--- a/learn-certs-pr/exams/mb-500.yml
+++ b/learn-certs-pr/exams/mb-500.yml
@@ -28,7 +28,7 @@ summary: >-
 subTitle: 'In dem Examen wird Ihre Fähigkeit geprüft, die folgenden technischen Aufgaben zu erledigen: Das Planen von Architektur- und Lösungsentwürfen; das Anwenden von Entwicklertools; das Entwerfen und Entwickeln von AOT-Elementen; das Entwickeln und Testen von Code; das Implementieren von Berichterstellung; das Integrieren und Verwalten von Datenlösungen und das Implementieren von Sicherheit sowie das Optimieren der Leistung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE42pBB
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MB-500&examname=Exam%20MB-500:%20Microsoft%20Dynamics%20365%20Finance%20and%20Operations%20Apps%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-500
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-500&examname=Exam%20MB-500:%20Microsoft%20Dynamics%20365%20Finance%20and%20Operations%20Apps%20Developer&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-500
 locales:
 - en
 - ja
