--- a/learn-certs-pr/exams/az-140.yml
+++ b/learn-certs-pr/exams/az-140.yml
@@ -29,7 +29,7 @@ subTitle: 'Diese Prüfung misst Ihre Fähigkeit, die folgenden technischen Aufga
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4MFST
 practiceTestUrl: https://in.mindhub.com/az-140-configuring-and-operating-microsoft-azure-virtual-desktop-microsoft-official-practice-test/p/MU-AZ-140?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=AZ-140&examname=Exam%20AZ-140:%20Configuring%20and%20Operating%20Azure%20Virtual%20Desktop&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-140
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=AZ-140&examname=Exam%20AZ-140:%20Configuring%20and%20Operating%20Azure%20Virtual%20Desktop&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Faz-140
 locales:
 - en
 - ja
