--- a/learn-certs-pr/exams/ms-740.yml
+++ b/learn-certs-pr/exams/ms-740.yml
@@ -22,7 +22,7 @@ summary: >-
 subTitle: 'In diesem Examen wird Ihre Fähigkeit geprüft, in den folgenden technischen Aufgabenszenarios Probleme zu behandeln: Sprachprobleme bei Microsoft Teams, Besprechungen und Liveereignisse in Microsoft Teams, Verbundprobleme, Anmelden bei Microsoft Teams, Teams und Kanäle sowie Dateien.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE4O2rS
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=en-us&examcode=MS-740&examname=Exam%20MS-740:%20Troubleshooting%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-740
+scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MS-740&examname=Exam%20MS-740:%20Troubleshooting%20Microsoft%20Teams&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fms-740
 locales:
 - en
 levels:
