--- a/learn-certs-pr/exams/mb-330.yml
+++ b/learn-certs-pr/exams/mb-330.yml
@@ -1,48 +1,47 @@
 ### YamlMime:Examination
-title: Microsoft Dynamics 365 Supply Chain Management
+title: Microsoft Dynamics 365 Supply Chain Management Functional Consultant
 metadata:
-  title: 'MB-330: Microsoft Dynamics 365 Supply Chain Management'
-  description: 'MB-330: Microsoft Dynamics 365 Supply Chain Management'
-  ms.openlocfilehash: 27cc0ca6f5bd4c764ca9cdc3c4e83292b1de8e30
-  ms.sourcegitcommit: 9732383406c868d1279ca5ca79d423c5b99be073
-  ms.translationtype: HT
+  title: 'MB-330: Microsoft Dynamics 365 Supply Chain Management Functional Consultant'
+  description: 'MB-330: Microsoft Dynamics 365 Supply Chain Management Functional Consultant'
+  ms.openlocfilehash: 6d9512478d87521b6580591e5d9c9f02c30e5a01
+  ms.sourcegitcommit: 3a53de64ec81bf478275e0a13a80f3a69bc1e586
+  ms.translationtype: MT
   ms.contentlocale: de-DE
-  ms.lasthandoff: 09/14/2021
-  ms.locfileid: "132105818"
+  ms.lasthandoff: 12/10/2021
+  ms.locfileid: "134680704"
 uid: exam.mb-330
 displayName: MB-330
 summary: >-
   <div>
 
-  <div><font color='red'><strong>Der Inhalt dieses Examens wurde am 26. Juli 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+  <div><font color='red'><strong>Der Inhalt dieses Examens wurde am 10. Dezember 2021 aktualisiert. Laden Sie das unten aufgeführte Dokument mit den bewerteten Qualifikationen herunter, um zu sehen, was sich geändert hat.</strong></font><br/><br/></div>
+
+  <div><font color='red'>HINWEIS: Erforderliche Mindestpunktzahl: 700. Weitere Informationen zu Prüfungsergebnissen finden Sie <a href="/learn/certifications/exam-scoring-reports#scores-needed-to-pass-exams">hier</a>.</font><br/><br/></div>
 
   </div>
 
 
-  Kandidat*innen für dieses Examen analysieren Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die bewährte Praktiken der Branche umsetzen. Die Kandidaten fungieren als wichtige Ressource bei der Implementierung und Konfiguration von Anwendungen zur Erfüllung von Geschäftsanforderungen.
+  Kandidat*innen für dieses Examen sind Fachberater für das Supply Chain Management, die das Dynamics 365 Supply Chain Management und zugehörige Tools und Technologien so entwerfen und konfigurieren, dass sie die Anforderungen eines Kunden erfüllen. Sie analysieren Geschäftsanforderungen und setzen diese Anforderungen in vollständig realisierte Geschäftsprozesse und Lösungen um, die empfohlene Praktiken der Branche implementieren. Gemeinsam mit Architekten, Entwicklern, Administratoren und anderen Beteiligten arbeiten Kandidat*innen an Lösungen, die die Anforderungen der Kunden erfüllen oder übertreffen.
 
 
-  Kandidaten für diese Prüfung verfügen über ein grundlegendes Verständnis der Buchhaltungsgrundsätze und der finanziellen Abläufe von Unternehmen, Kundenservice, Außendienst, Fertigung, Einzelhandel und Lieferkettenmanagement. Sie spezialisieren sich in der Regel auf eine oder mehrere Funktionsgruppen von Finanz- und Betriebsanwendungen, einschließlich Finanzen, Fertigung und Lieferkettenmanagement.
-
-
-  Kandidaten müssen über Grundkenntnisse in den Praktiken des Lieferantenmanagements verfügen, einschließlich Beschaffung, Handel, Logistik, Lagerverwaltung und Transportmanagement.
-subTitle: 'Mit dieser Prüfung wird Ihre Fähigkeit gemessen, die folgenden technischen Aufgaben zu bewältigen: Implementierung von Produktinformationsmanagement, Implementierung von Bestandsmanagement, Implementierung und Verwaltung von Lieferkettenprozessen, Implementierung von Lager- und Transportmanagement und Implementierung von Planungsoptimierung.'
+  Sie implementieren die Produktinformationsverwaltung, Vertriebs- und Beschaffungsprozesse, die Bestands- und Lagerverwaltung, Masterplanung und Transportverwaltung.
+subTitle: 'Mit diesem Examen wird Ihre Fähigkeit gemessen, die folgenden technischen Aufgaben zu bewältigen: Implementierung von Produktinformationsmanagement, Implementierung von Bestandsmanagement, Implementierung und Verwaltung von Lieferkettenprozessen, Implementierung von Lager- und Transportmanagement und Implementierung der Masterplanung.'
 iconUrl: /media/learn/certification/badges/certification-exam.svg
 pdfDownloadUrl: https://query.prod.cms.rt.microsoft.com/cms/api/am/binary/RE3VwVt
 practiceTestUrl: https://in.mindhub.com/mb-330-microsoft-dynamics-365-supply-chain-microsoft-official-practice-test/p/MU-MB-330?utm_source=microsoft&utm_medium=certpage&utm_campaign=msofficialpractice
-scheduleExamUrl: https://examregistration.microsoft.com/?locale=de-DE&examcode=MB-330&examname=Exam%20MB-330:%20Microsoft%20Dynamics%20365%20for%20Finance%20and%20Operations,%20Supply%20Chain%20Management&returnToLearningUrl=https%3A%2F%2Fdocs.microsoft.com%2Flearn%2Fcertifications%2Fexams%2Fmb-330
+scheduleExamUrl: https://go.microsoft.com/fwlink/?linkid=2183081
 locales:
 - en
 - ja
 levels:
 - intermediate
 skills:
-- The content of this exam was updated on July 26, 2021. Please download the exam skills outline below to see what changed.
-- Implement product information management (25-30%)
-- Implement inventory management (15-20%)
-- Implement and manage Supply Chain processes (15-20%)
-- Implement warehouse management and transportation management (20-25%)
-- Implement Planning Optimization (15-20%)
+- The content of this exam was updated on December 10, 2021. Please download the exam skills outline below to see what changed.
+- Implement product information management (35-40%)
+- Implement inventory management (20-25%)
+- Implement and manage supply chain processes (15-20%)
+- Implement warehouse management and transportation management (15-20%)
+- Implement Master planning (5–10 %)
 roles:
 - functional-consultant
 products:
